FIX: Fix intro on smaller screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+	h1 {
+		@apply text-5xl font-bold bg-clip-text bg-gradient-to-r from-teal-400 to-blue-500 text-transparent sm:text-6xl md:text-7xl lg:text-8xl xl:text-9xl;
+	}
 	h2 {
-		@apply text-3xl font-bold bg-clip-text bg-gradient-to-r from-teal-400 to-blue-500 text-transparent inline-block leading-snug sm:text-4xl md:text-5xl lg:text-6xl;
+		@apply text-3xl font-bold bg-clip-text bg-gradient-to-r from-teal-400 to-blue-500 text-transparent inline-block sm:text-4xl md:text-5xl lg:text-6xl;
 	}
 	h3 {
 		@apply text-xl font-bold lg:text-2xl;
